Fixing FOUC during pre-wrapping of content elements

--- a/src/style/bellows.scss
+++ b/src/style/bellows.scss
@@ -1,7 +1,16 @@
-.bellows__item.bellows--is-open > .bellows__content-wrapper,
-.bellows__item.bellows--is-closing > .bellows__content-wrapper {
-    // This declaration is necessary for items that are open by default 
-    display: block;
+// Don't show the Bellows content before our script has initialized
+.bellows__item:not(.bellows--is-open) {
+    > .bellows__content {
+        display: none;
+    }
+}
+
+.bellows__item.bellows--is-open,
+.bellows__item.bellows--is-closing {
+    > .bellows__content-wrapper {
+        // This declaration is necessary for items that are open by default
+        display: block
+    }
 }
 
 .bellows__content-wrapper {
